# agx

./: AGENTS.md  Cargo.toml  README.md  build.rs  install.sh
.agents/skills/: builtin-manifest.toml
.agents/skills/ask-user-question/: SKILL.md
.agents/skills/ask-user-question/agents/: openai.yaml
.agents/skills/new-rfc/: SKILL.md
.agents/skills/new-rfc-skill-creation-skill/: SKILL.md
.agents/skills/new-rfc-skill-creation-skill/agents/: openai.yaml
.agents/skills/new-rfc-skill-creation-skill/references/: rfc-skill-template.md
.agents/skills/new-rfc/agents/: openai.yaml
.github/workflows/: ci.yml  release.yml
rfc/: 0000-template.md  0001-bundle-agent-skills-with-releases-and-expose-skill-discovery.md
src/: cli.rs  main.rs  output.rs
src/rfc/: create.rs  init.rs  lookup.rs  mod.rs  reference.rs  revise.rs  template.rs  util.rs
src/skill/: catalog.rs  dump.rs  export.rs  init.rs  install.rs  list.rs  materialize.rs  metadata.rs  mod.rs  paths.rs  select.rs  validate.rs
src/skill/builtin/: mod.rs
tests/: terminal_integration.rs
tests/common/: mod.rs
