[package]
name = "agx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
arboard = "3.4.1"
chrono = { version = "0.4.39", default-features = true }
clap = { version = "4.5.30", features = ["derive"] }
flate2 = "1.0.35"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tar = "0.4.44"
tera = "1.20.0"
toml_edit = "0.22.24"

[build-dependencies]
anyhow = "1.0.95"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
toml_edit = "0.22.24"
